<resources>
    <string name="app_name">Scraps</string>
    <string name="app_logo">App Logo</string>
    <string name="app_description">Store and manage your favourite music and movies in a digital library</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="library_hint">Search for your favorite music and movies to add to your library.</string>
    <string name="google_icon">Google Icon</string>
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    
    <!-- Last.fm Collage Generator -->
    <string-array name="collage_time_periods">
        <item>Last 7 days</item>
        <item>Last 30 days</item>
        <item>Last 12 months</item>
    </string-array>
    
    <string-array name="collage_sizes">
        <item>3x3</item>
        <item>4x4</item>
        <item>6x6</item>
        <item>9x9</item>
        <item>12x12</item>
        <item>Custom</item>
    </string-array>
</resources>