<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.playpass.scraps.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.playpass.scraps.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.playpass.scraps.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation> 